<resources>
    <string name="app_name">Http 클라이언트</string>
    <string name="request">요청</string>
    <string name="progress">진행 중</string>
    <string name="copy_all">모두 복사</string>
    <string name="console">콘솔</string>
    <string name="sync">동기식</string>
    <string name="async">비동기식</string>
    <string name="log_list_empty">로그가 존재하지 않습니다.</string>
    <string name="settings">설정</string>
    <string name="settings_default">기본</string>
    <string name="settings_headers">헤더</string>
    <string name="settings_params">파라미터</string>
    <string name="settings_body">바디</string>
    <string name="url">URL</string>
    <string name="hint_url">URL을 입력하세요.</string>
    <string name="method">메서드</string>
    <string name="key">키</string>
    <string name="value">값</string>
    <string name="hint_body">바디를 입력하세요.</string>
    <string name="headers_list_empty">헤더가 존재하지 않습니다.</string>
    <string name="params_list_empty">파라미터가 존재하지 않습니다.</string>
    <string name="hint_key">키를 입력하세요.</string>
    <string name="hint_value">값을 입력하세요.</string>
    <string name="cancel">취소</string>
    <string name="create">생성</string>
    <string name="update">갱신</string>
    <string name="delete">삭제</string>
    <string name="copy">복사</string>
    <string name="clipboard">클립보드에 복사되었습니다.</string>
    <string name="sync_request_failure">동기식 API 요청 실패</string>
    <string name="sync_request_success">동기식 API 요청 성공</string>
    <string name="async_request_failure">비동기식 API 요청 실패</string>
    <string name="async_request_success">비동기식 API 요청 성공</string>
    <string name="pair_remove_confirm_message">정말로 해당 %s를 삭제하시겠습니까?</string>
    <string name="pair_remove_message">해당 %s가 삭제되었습니다.</string>
</resources>